fix(dropdown): selected text overflow, resolves #71

--- a/src/components/reusable/dropdown/dropdown.scss
+++ b/src/components/reusable/dropdown/dropdown.scss
@@ -52,6 +52,11 @@
   cursor: default;
   white-space: nowrap;
 
+  span {
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+
   &.size--sm {
     height: 32px;
   }
